# template-lib

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  ARCHITECTURE.md  BACKPORT-LEDGER.md  BACKPORT-PLAN.md  CLAUDE.md  COMMIT-REVIEW-dirsql-cachetta.md  Cargo.toml  README.md  ROADMAP.md  justfile  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  putitoutthere.toml  rustfmt.toml  testing-conventions.toml
.claude/skills/try-pr/: SKILL.md
.github/scripts/: bootstrap_npm.py  bootstrap_npm_test.py  check_changelog.py  check_changelog_test.py  lint_workflow_scripts.py  lint_workflow_scripts_test.py  pytest.ini
.github/workflows/: bootstrap-npm.yml  build-check.yml  changelog.yml  check.yml  ci.yml  conventions.yml  deps.yml  docs.yml  gha-scripts.yml  node.yml  publish.yml  python.yml  release.yml  rust.yml
docs/: AGENTS.md  getting-started.md  index.md  migrations.md  package.json  python-supervision.md  rust-supervision.md  typescript-supervision.md
docs/.vitepress/: config.ts
docs/explanation/: index.md
docs/guide/: index.md  testing-conventions.md
docs/reference/: index.md
internals/: repo.md
internals/python/: review.md  setup.md  shipping.md  style.md  testing.md
internals/rust/: setup.md  shipping.md  style.md
internals/typescript/: setup.md  shipping.md
notes/: piot-napi-handoff.md
scripts/: check-no-auto-install.sh  check-no-deprecated-deps.sh
