[workspace]
resolver = "2"
members = ["packages/rust"]

[workspace.package]
version = "0.0.1"
edition = "2021"
license = "MIT"
authors = ["Kevin Scott <me@thekevinscott.com>"]
repository = "https://github.com/thekevinscott/darkfactory"

[workspace.dependencies]
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
