# Workspace root. The Rust core is the single source of truth (logic + idiomatic
# Rust SDK + the CLI via run_cli). The Python (PyO3) and Node (napi) binding
# crates live under packages/{python,node} and depend on `mynewproduct` via path;
# each binding IS that language's SDK (no separate veneer).
#
# default-members = [core] is deliberate: a bare `cargo build` / `clippy`
# (pre-commit, rust.yml) builds ONLY the core. The binding crates are pyo3/napi
# cdylibs that need their FFI feature (`extension-module`) and the host language
# toolchain to link; building them with a bare cargo (no `--features`) fails on
# macOS. Scope every cargo invocation to `-p mynewproduct`.
[workspace]
resolver = "2"
members = [
    "packages/rust/core",
    "packages/python",
    "packages/node",
]
default-members = [
    "packages/rust/core",
]

[workspace.package]
version = "0.0.1"
edition = "2021"
license = "MIT"
authors = ["Kevin Scott <me@thekevinscott.com>"]
repository = "https://github.com/thekevinbot/template-lib"

[profile.release]
opt-level = 3
lto = true
